# wiki-country-parser

./: .gitignore  pyproject.toml
src/: app.py  db.py  main.py  models.py  settings.py  utils.py
tests/: capital.html  test_parse.py  test_regexes.py
